--- a/moomood/Base.lproj/Main.storyboard
+++ b/moomood/Base.lproj/Main.storyboard
@@ -243,6 +243,9 @@
                                 <rect key="frame" x="56" y="371" width="36" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Work"/>
+                                <connections>
+                                    <action selector="addWorkCauseToMood:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="7o8-qa-etj"/>
+                                </connections>
                             </button>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2CY-az-7IT">
                                 <rect key="frame" x="120" y="371" width="44" height="30"/>
@@ -296,11 +299,11 @@
                         <outlet property="button3" destination="Ggz-xW-1sQ" id="HaF-Uo-QRy"/>
                         <outlet property="button4" destination="KMr-hC-1Ey" id="ycJ-f1-sjf"/>
                         <outlet property="button5" destination="DPd-Yx-Ww3" id="SbN-mF-xsa"/>
+                        <outlet property="chosenMoodMessage" destination="3KO-TK-Y8u" id="Hho-6P-Kij"/>
                         <outlet property="familyButton" destination="2CY-az-7IT" id="kfa-UE-PIH"/>
                         <outlet property="financesButton" destination="hgL-hJ-udp" id="XDN-Hs-lMG"/>
                         <outlet property="healthButton" destination="Tz3-IO-cMh" id="Pzi-XO-qxn"/>
                         <outlet property="homeButton" destination="b1O-Vb-1oE" id="Ics-Ww-xpI"/>
-                        <outlet property="message" destination="3KO-TK-Y8u" id="5Dy-aP-pTN"/>
                         <outlet property="otherButton" destination="ydr-Tn-A0O" id="WEz-De-ZcC"/>
                         <outlet property="partnerButton" destination="MGI-kp-ZOs" id="UPv-NK-q5O"/>
                         <outlet property="preferNotToSayButton" destination="GvD-vd-GcV" id="E4Z-ve-sjP"/>
