--- a/moomood/Base.lproj/Main.storyboard
+++ b/moomood/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Journal-->
+        <!--First View Controller-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
                 <viewController id="9pv-A4-QxB" customClass="FirstViewController" customModule="moomood" customModuleProvider="target" sceneMemberID="viewController">
@@ -52,7 +52,7 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Journal" image="first" id="acW-dT-cKf">
+                    <tabBarItem key="tabBarItem" title="" image="Book" id="acW-dT-cKf">
                         <color key="badgeColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </tabBarItem>
                     <connections>
@@ -63,7 +63,7 @@
             </objects>
             <point key="canvasLocation" x="749.27536231884062" y="-321.19565217391306"/>
         </scene>
-        <!--Feeling-->
+        <!--Second View Controller-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
                 <viewController id="8rJ-Kc-sve" customClass="SecondViewController" customModule="moomood" customModuleProvider="target" sceneMemberID="viewController">
@@ -124,7 +124,7 @@
                                         <fragment content="2">
                                             <attributes>
                                                 <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                <font key="NSFont" size="15" name="AvenirNext-UltraLight"/>
+                                                <font key="NSFont" size="18" name="AvenirNext-UltraLight"/>
                                             </attributes>
                                         </fragment>
                                     </attributedString>
@@ -148,7 +148,7 @@
                                         <fragment content="3">
                                             <attributes>
                                                 <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                <font key="NSFont" size="15" name="AvenirNext-UltraLight"/>
+                                                <font key="NSFont" size="18" name="AvenirNext-UltraLight"/>
                                             </attributes>
                                         </fragment>
                                     </attributedString>
@@ -172,7 +172,7 @@
                                         <fragment content="4">
                                             <attributes>
                                                 <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                <font key="NSFont" size="15" name="AvenirNext-UltraLight"/>
+                                                <font key="NSFont" size="18" name="AvenirNext-UltraLight"/>
                                             </attributes>
                                         </fragment>
                                     </attributedString>
@@ -196,7 +196,7 @@
                                         <fragment content="1">
                                             <attributes>
                                                 <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                <font key="NSFont" size="15" name="AvenirNext-UltraLight"/>
+                                                <font key="NSFont" size="18" name="AvenirNext-UltraLight"/>
                                             </attributes>
                                         </fragment>
                                     </attributedString>
@@ -363,7 +363,7 @@
                                         <fragment content="5">
                                             <attributes>
                                                 <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                <font key="NSFont" size="15" name="AvenirNext-UltraLight"/>
+                                                <font key="NSFont" size="18" name="AvenirNext-UltraLight"/>
                                             </attributes>
                                         </fragment>
                                     </attributedString>
@@ -381,7 +381,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Feeling" image="second" id="cPa-gy-q4n">
+                    <tabBarItem key="tabBarItem" title="" image="HeartEmpty" id="cPa-gy-q4n">
                         <color key="badgeColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
                     </tabBarItem>
                     <connections>
@@ -407,7 +407,7 @@
             </objects>
             <point key="canvasLocation" x="749.60000000000002" y="359.37031484257875"/>
         </scene>
-        <!--Graph-->
+        <!--Chart View Controller-->
         <scene sceneID="Zpu-M1-Ult">
             <objects>
                 <viewController id="kf2-kq-9Bf" customClass="ChartViewController" customModule="moomood" customModuleProvider="target" sceneMemberID="viewController">
@@ -448,7 +448,7 @@
                             <constraint firstItem="p6f-qD-iHd" firstAttribute="top" secondItem="dhs-Vq-P6a" secondAttribute="bottom" id="xQo-Xz-Iwr"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Graph" id="Idu-qo-mwa">
+                    <tabBarItem key="tabBarItem" title="" image="Chart" id="Idu-qo-mwa">
                         <color key="badgeColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
                     </tabBarItem>
                     <connections>
@@ -466,10 +466,10 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" id="W28-zg-YXA">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                        <color key="backgroundColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
-                        <color key="tintColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="barTintColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
-                        <color key="selectedImageTintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="selectedImageTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     </tabBar>
                     <connections>
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
@@ -483,7 +483,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="first" width="30" height="30"/>
-        <image name="second" width="30" height="30"/>
+        <image name="Book" width="23" height="19"/>
+        <image name="Chart" width="24" height="20"/>
+        <image name="HeartEmpty" width="25" height="22"/>
     </resources>
 </document>
