--- a/moomood/Base.lproj/Main.storyboard
+++ b/moomood/Base.lproj/Main.storyboard
@@ -173,34 +173,27 @@
             </objects>
             <point key="canvasLocation" x="343" y="179"/>
         </scene>
-        <!--Chat-->
+        <!--Chatbot View Controller-->
         <scene sceneID="dVR-4N-Jhx">
             <objects>
                 <viewController id="8c0-q6-hmv" customClass="ChatbotViewController" customModule="moomood" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="v0Y-NU-zL1">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eCd-Jh-JWJ">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                                <items>
-                                    <navigationItem title="Title" id="mRl-wA-8Bb"/>
-                                </items>
-                            </navigationBar>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="eCd-Jh-JWJ" firstAttribute="leading" secondItem="GuX-UV-T5A" secondAttribute="leading" id="2Zt-Nn-fMS"/>
-                            <constraint firstItem="eCd-Jh-JWJ" firstAttribute="top" secondItem="v0Y-NU-zL1" secondAttribute="top" id="TtX-Ma-4bd"/>
-                            <constraint firstItem="eCd-Jh-JWJ" firstAttribute="trailing" secondItem="GuX-UV-T5A" secondAttribute="trailing" id="xAt-Ga-lt4"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="GuX-UV-T5A"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Chat" id="wWg-8a-WKH" userLabel="Chat"/>
+                    <navigationItem key="navigationItem" id="H0J-4u-Mg2">
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="Z5R-QF-eic">
+                            <connections>
+                                <segue destination="49e-Tb-3d3" kind="showDetail" id="AyD-JP-vh5"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EGg-c5-U41" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="979" y="181"/>
+            <point key="canvasLocation" x="1912" y="179"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -215,12 +208,31 @@
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
                         <segue destination="kf2-kq-9Bf" kind="relationship" relationship="viewControllers" id="9J6-bt-Q0g"/>
-                        <segue destination="8c0-q6-hmv" kind="relationship" relationship="viewControllers" id="EPx-6D-ttd"/>
+                        <segue destination="VM5-lu-TjR" kind="relationship" relationship="viewControllers" id="EPx-6D-ttd"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="10" y="-584"/>
+        </scene>
+        <!--Chat-->
+        <scene sceneID="3Kk-mV-glQ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VM5-lu-TjR" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Chat" id="wWg-8a-WKH" userLabel="Chat"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5un-ua-USA">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="8c0-q6-hmv" kind="relationship" relationship="rootViewController" id="n91-m7-Aww"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NlP-sV-MHn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1231.8840579710145" y="178.53260869565219"/>
         </scene>
     </scenes>
     <resources>
