--- a/moomood/Base.lproj/Main.storyboard
+++ b/moomood/Base.lproj/Main.storyboard
@@ -530,11 +530,11 @@
             </objects>
             <point key="canvasLocation" x="10" y="-584"/>
         </scene>
-        <!--Chat-->
+        <!--Navigation Controller-->
         <scene sceneID="3Kk-mV-glQ">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VM5-lu-TjR" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Chat" id="wWg-8a-WKH" userLabel="Chat"/>
+                    <tabBarItem key="tabBarItem" title="" image="Chat" id="wWg-8a-WKH" userLabel="Chat"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5un-ua-USA">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -553,9 +553,10 @@
     <resources>
         <image name="Book" width="23" height="19"/>
         <image name="Chart" width="24" height="20"/>
+        <image name="Chat" width="24" height="24"/>
         <image name="HeartEmpty" width="25" height="22"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="EjJ-jA-AnB"/>
+        <segue reference="EPx-6D-ttd"/>
     </inferredMetricsTieBreakers>
 </document>
